--- a/Vanilla JS Popup Modals/style.scss
+++ b/Vanilla JS Popup Modals/style.scss
@@ -5,6 +5,8 @@ $primary-color: #ffffff;
 $light-gray: #ccc;
 $very-light-gray: #fefefe;
 $spacing: 2rem;
+$white: #ffffff;
+$box-shadow: 0 0 30px 15px rgba(39, 44, 61, 0.06);
 
 body {
   font-family: $fonts;
@@ -39,8 +41,11 @@ header {
   padding: 0 20px;
   .card {
     border-radius: 2px;
-    box-shadow: 0 0 30px 15px rgba(39, 44, 61, 0.06);
+    box-shadow: $box-shadow;
     flex: 0 1 calc(33.33% - 30px);
+    &.popup-trigger {
+      cursor: pointer;
+    }
     .image-container {
       overflow: hidden;
       height: 203px;
@@ -69,5 +74,47 @@ header {
         }
       }
     }
+  }
+}
+/****** Modals ******/
+.body-blackout {
+  position: absolute;
+  z-index: 1010;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.65);
+  display: none;
+
+  &.is-blacked-out {
+    display: block;
+  }
+}
+.popup-modal {
+  height: 365px;
+  width: 650px;
+  position: absolute;
+  background-color: $white;
+  box-shadow: $box-shadow;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  pointer-events: none;
+  transition: all 300ms ease-in-out;
+  z-index: 1011;
+
+  &.is--visible {
+    opacity: 1;
+    pointer-events: auto;
+  }
+
+  &__close {
+    position: absolute;
+    font-size: 1.2rem;
+    right: -10px;
+    top: -10px;
+    cursor: pointer;
   }
 }
